[fix] Cannot change the dashed-border gaps.

--- a/style.scss
+++ b/style.scss
@@ -41,7 +41,10 @@
   display: none;
   padding-left : 25px;
   padding-right : 25px;
-  border: dashed 1px black;
+  background-image: linear-gradient(black 33%, rgba(255,255,255,0) 0%);
+  background-position: left;
+  background-size: 1px 10px;
+  background-repeat: repeat-y;
 }
 
 .expand-all{
